return an indicator in the case an index is stuck